add close status
